third_party/move/move-compiler-v2/tests/more-v1/expansion/restricted_module_names.move
// not allowed
module 0x42::Self {}
// now allowed
module 0x42::vector {}
